Fix overflow-x

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@
 body {
   background-color: var(--clr-bg);
   color:var(--clr-paragraph);
-  overflow: hidden;
+  overflow-x: hidden;
 }
 h1, .h1 {
   font-size: var(--h1);
